array.island.Island.scala.error
Compilation error:
Island:4: error: value === is not a member of Array[Int]
  if (num === Array(0,0,2,4,0,0))
          ^